Add ansible.network job
Signed-off-by: GomathiselviS <gomathiselvi@gmail.com>

--- a/zuul.d/projects.yaml
+++ b/zuul.d/projects.yaml
@@ -51,6 +51,13 @@
       - publish-to-automation-hub
 
 - project:
+    name: github.com/ansible-collections/ansible.utils
+    default-branch: main
+    merge-mode: squash-merge
+    templates:
+      - system-required
+
+- project:
     name: github.com/ansible-collections/arista.eos
     default-branch: main
     merge-mode: squash-merge
